--- a/style/style.css
+++ b/style/style.css
@@ -11957,13 +11957,13 @@ body {
 }
 
 img.logo {
-  width: 145px;
-  height: 35px;
+  width: 14.5rem;
+  height: 3.5rem;
 }
 
 img.navbar-image {
-  width: 60px;
-  height: 60px;
+  width: 6.0rem;
+  height: 6.0rem;
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
@@ -11983,20 +11983,20 @@ input.form-control {
 
 .image-icon {
   display: inline-block;
-  border-radius: 60px;
-  -webkit-box-shadow: 0px 0px 2px #222121;
-          box-shadow: 0px 0px 2px #222121;
+  border-radius: 6.0rem;
+  -webkit-box-shadow: 0rem 0rem .2rem #222121;
+          box-shadow: 0rem 0rem .2rem #222121;
   background-color: #222121;
-  padding: 0.5em 0.6em;
+  padding: 0.5rem 0.6rem;
 }
 
 .form-control {
-  border-radius: 60px;
+  border-radius: 6.0rem;
   width: 100%;
 }
 
 h3, .h3 {
-  padding-top: 0px;
+  padding-top: 0rem;
   font-weight: 600;
   color: #fff;
 }
@@ -12012,23 +12012,23 @@ h5, .h5 {
 
 .search-wrapper img {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 0.5rem;
+  left: 0.5rem;
   display: inline-block;
-  border-radius: 60px;
-  -webkit-box-shadow: 0px 0px 2px #222121;
-          box-shadow: 0px 0px 2px #222121;
+  border-radius: 6.0rem;
+  -webkit-box-shadow: 0rem 0rem .2rem #222121;
+          box-shadow: 0rem 0rem .2rem #222121;
   background-color: #ffff;
-  padding: 0.5em;
+  padding: 0.5rem;
 }
 
 .d-flex input {
-  height: 40px;
-  width: 500px;
+  height: 4.0rem;
+  width: 50.0rem;
 }
 
 .tab {
-  border-radius: 60px;
+  border-radius: 6.0rem;
   background-color: #3179AA;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12043,15 +12043,15 @@ h5, .h5 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 1300px;
-  height: 35px;
+  width: 85%;
+  height: 3.5rem;
 }
 
 .nav-pills .nav-link.active {
   color: #3179AA;
   background-color: #fff;
-  border-radius: 60px;
-  padding: 0px 70px 0px 70px;
+  border-radius: 6.0rem;
+  padding: 0rem 7.0rem 0rem 7.0rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -12059,7 +12059,7 @@ h5, .h5 {
       -ms-flex-pack: center;
           justify-content: center;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 a.nav-link {
@@ -12071,11 +12071,11 @@ a.nav-link {
       -ms-flex-pack: center;
           justify-content: center;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .nav-link {
-  padding: 0px 20px 0px 20px;
+  padding: 0rem 2.0rem 0rem 2.0rem;
 }
 
 .card {
@@ -12085,45 +12085,49 @@ a.nav-link {
 
 div.card-header.left {
   color: #fff;
-  border-radius: 20px 20px 0px 0px;
+  border-radius: 2.0rem 2.0rem 0rem 0rem;
   background-color: #111111;
 }
 
 div.card {
-  border-radius: 20px;
+  border-radius: 2.0rem;
+}
+
+h4.right-bottom-header, .right-bottom-header.h4 {
+  padding-bottom: 1.3rem;
 }
 
 img.card-image {
-  width: 65px;
-  height: 65px;
+  width: 6.5rem;
+  height: 6.5rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 img.card-image-right {
-  width: 70px;
-  height: 70px;
+  width: 7.0rem;
+  height: 7.0rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 0px;
+  margin-bottom: 0rem;
 }
 
 .card-image-2 {
-  width: 80px;
-  height: 30px;
+  width: 8.0rem;
+  height: 3.0rem;
 }
 
 .btn {
-  border-radius: 60px;
+  border-radius: 6.0rem;
 }
 
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 25px;
+  width: 6.0rem;
+  height: 2.5rem;
 }
 
 .switch input {
@@ -12147,10 +12151,10 @@ img.card-image-right {
 .slider:before {
   position: absolute;
   content: "";
-  height: 18px;
-  width: 18px;
-  left: 8px;
-  bottom: 3.5px;
+  height: 1.8rem;
+  width: 1.8rem;
+  left: .8rem;
+  bottom: 0.4rem;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
@@ -12161,38 +12165,34 @@ input:checked + .slider {
 }
 
 input:focus + .slider {
-  -webkit-box-shadow: 0 0 1px #2196F3;
-          box-shadow: 0 0 1px #2196F3;
+  -webkit-box-shadow: 0 0 .1rem #2196F3;
+          box-shadow: 0 0 .1rem #2196F3;
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(2.6rem);
+  transform: translateX(2.6rem);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 34px;
+  border-radius: 3.4rem;
 }
 
 .slider.round:before {
   border-radius: 50%;
 }
 
-div.a {
-  text-align: right;
-}
-
 div.left {
-  padding: 20px;
+  padding: 2.0rem;
 }
 
 div.card-body {
-  padding: 50px 50px 20px 50px;
+  padding: 5.0rem 5.0rem 1.8rem 5.0rem;
 }
 
 div.card-body-right {
-  padding: 30px 45px 12px 40px;
+  padding: 3.0rem 4.5rem 1.2rem 4.0rem;
 }
 
 a.left {
@@ -12200,8 +12200,8 @@ a.left {
 }
 
 .row-btn {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 0.0rem;
+  padding-bottom: 2.5rem;
   width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -12215,8 +12215,8 @@ a.left {
 }
 
 .tabs {
-  padding-bottom: 50px;
-  padding-top: 30px;
+  padding-bottom: 5.0rem;
+  padding-top: 3.0rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -12230,8 +12230,12 @@ a.left {
 
 div.card-right {
   background-color: #383838;
-  border-radius: 20px;
-  padding-top: 10px;
+  border-radius: 2.0rem;
+  padding-top: 1.0rem;
+}
+
+div.card-body-bottom-left {
+  padding-bottom: 2.5rem;
 }
 
 p.card-title {
@@ -12241,12 +12245,12 @@ p.card-title {
 h5.card-title, .card-title.h5 {
   text-align: center;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 2.0rem;
   color: #FFFFFF;
 }
 
 div.progress {
-  border-radius: 50px;
+  border-radius: 5.0rem;
 }
 
 div.row-btn-left {
@@ -12263,15 +12267,15 @@ h4.card-title, .card-title.h4 {
 }
 
 a.btn-primary {
-  padding: 10px 50px 10px 50px;
+  padding: 1.0rem 5.0rem 1.0rem 5.0rem;
 }
 
 div.card {
-  padding-bottom: 30px;
+  padding-bottom: 3.0rem;
 }
 
 h6.card-title, .card-title.h6 {
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
   color: #3179AA;
 }
@@ -12288,11 +12292,35 @@ p.card-title-1 {
 .outside {
   text-align: center;
   color: #fff;
-  font-size: 20px;
-  padding: 30px;
+  font-size: 2.0rem;
+  padding: 3.0rem;
 }
 
 .upper {
-  padding-bottom: 30px;
+  padding-bottom: 3.0rem;
+}
+
+.green {
+  color: #2F9679;
+}
+
+@media (max-width: 998px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 45%;
+  }
+}
+
+html {
+  font-size: 70.5%;
+}
+
+p.card-text {
+  font-size: 1.7rem;
 }
 /*# sourceMappingURL=style.css.map */
