--- a/style/style.scss
+++ b/style/style.scss
@@ -1,17 +1,17 @@
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
-@import '../sass/vendor';
+@import '../style/vendor';
 
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #383838;
 }
 img.logo{
-    width: 145px;
-    height: 35px;
+    width: 14.5rem;
+    height: 3.5rem;
 }
 img.navbar-image{
-    width: 60px;
-    height: 60px;
+    width: 6.0rem;
+    height: 6.0rem;
     justify-content: right;
     align-items: right;
 }
@@ -25,18 +25,18 @@ input.form-control{
 }
 .image-icon{
     display: inline-block;
-  border-radius: 60px;
-  box-shadow: 0px 0px 2px #222121;
+  border-radius: 6.0rem;
+  box-shadow: 0rem 0rem .2rem #222121;
   background-color: #222121;
-  padding: 0.5em 0.6em;
+  padding: 0.5rem 0.6rem;
 }
 
 .form-control{
-    border-radius: 60px;
+    border-radius: 6.0rem;
     width: 100%;
 }
 h3{
-    padding-top: 0px;
+    padding-top: 0rem;
     font-weight: 600;
     color: #fff;
     
@@ -51,29 +51,28 @@ h5{
 }
 .search-wrapper img{
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 0.5rem;
+    left: 0.5rem;
     display: inline-block;
-    border-radius: 60px;
-    box-shadow: 0px 0px 2px #222121;
+    border-radius: 6.0rem;
+    box-shadow: 0rem 0rem .2rem #222121;
     background-color: #ffff;
-    padding: 0.5em ;
+    padding: 0.5rem ;
 }
 .d-flex input{
-    height: 40px;
-    width: 500px;
+    height: 4.0rem;
+    width: 50.0rem;
 }
 
 .tab{
-    border-radius: 60px;
+    border-radius: 6.0rem;
     background-color: #3179AA;
-    
     display: flex;
-  align-items: center;
-  flex-direction:column;
-  justify-content: center;
-  width: 1300px;
-  height: 35px;
+    align-items: center;
+    flex-direction:column;
+    justify-content: center;
+    width: 85%;
+    height: 3.5rem;
     
 }
 
@@ -82,12 +81,12 @@ h5{
 .nav-pills .nav-link.active {
     color: #3179AA;
     background-color: #fff;
-    border-radius: 60px;
-    padding: 0px 70px 0px 70px;
+    border-radius: 6.0rem;
+    padding: 0rem 7.0rem 0rem 7.0rem;
     align-items: center;
     justify-content: center;
     font-weight: 600;
-    font-size: 16px ;
+    font-size: 1.6rem ;
     
 }
 a.nav-link{
@@ -95,11 +94,11 @@ a.nav-link{
     align-items: center;
     justify-content: center;
     font-weight: 600;
-    font-size: 16px
+    font-size: 1.6rem
 }
 
 .nav-link{
-    padding:0px 20px 0px 20px ;
+    padding:0rem 2.0rem 0rem 2.0rem ;
 }
 
 .card{
@@ -111,43 +110,44 @@ a.nav-link{
 div.card-header.left{
     
     color: #fff;
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 2.0rem 2.0rem 0rem 0rem;
     
     background-color: #111111;
 }
 div.card{
-    border-radius: 20px;
+    border-radius: 2.0rem;
+}
+h4.right-bottom-header{
+    padding-bottom:1.3rem ;
 }
 img.card-image{
-    width: 65px;
-    height: 65px;
+    width: 6.5rem;
+    height: 6.5rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 img.card-image-right{
-    width: 70px;
-    height: 70px;
+    width: 7.0rem;
+    height: 7.0rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 0px;
+    margin-bottom: 0rem;
 }
 .card-image-2{
-    width: 80px;
-    height: 30px;
+    width: 8.0rem;
+    height: 3.0rem;
 }
 .btn{
-    border-radius: 60px;
-    
-    
+    border-radius: 6.0rem;
 }
 
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 25px;
+    width: 6.0rem;
+    height: 2.5rem;
   }
   
   .switch input { 
@@ -171,10 +171,10 @@ img.card-image-right{
   .slider:before {
     position: absolute;
     content: "";
-    height: 18px;
-    width: 18px;
-    left: 8px;
-    bottom: 3.5px;
+    height: 1.8rem;
+    width: 1.8rem;
+    left: .8rem;
+    bottom: 0.4rem;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
@@ -185,65 +185,64 @@ img.card-image-right{
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 .1rem #2196F3;
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(2.6rem);
+    -ms-transform: translateX(2.6rem);
+    transform: translateX(2.6rem);
   }
   
   /* Rounded sliders */
   .slider.round {
-    border-radius: 34px;
+    border-radius: 3.4rem;
   }
   
   .slider.round:before {
     border-radius: 50%;
   }
   
-  div.a{
-      text-align: right;
-  }
+  
   div.left{
-      padding: 20px;
+      padding: 2.0rem;
   }
 
   div.card-body{
-      padding: 50px 50px 20px 50px;
+      padding: 5.0rem 5.0rem 1.8rem 5.0rem;
   }
 
   div.card-body-right{
-    padding: 30px 45px 12px 40px;
+    padding: 3.0rem 4.5rem 1.2rem 4.0rem;
 }
 
 
   a.left{
-
-  
  width: 50%;
   }
 
   .row-btn{
-    padding-top: 50px;  
-    padding-bottom:50px ;
-    width: 100%;
+        padding-top: 0.0rem;  
+        padding-bottom:2.5rem ;
+        width: 100%;
       justify-content: center;
       align-items: center;
       display: flex;
   }
   .tabs{
-    padding-bottom:50px ;
-    padding-top: 30px;
+    padding-bottom:5.0rem ;
+    padding-top: 3.0rem;
     justify-content: center;
     align-items: center;
     display: flex;
   }
   div.card-right{
       background-color: #383838;
-      border-radius: 20px;
-      padding-top: 10px;
+      border-radius: 2.0rem;
+      padding-top: 1.0rem;
+  }
+  div.card-body-bottom-left{
+      padding-bottom: 2.5rem;
   }
   p.card-title{
       text-align: center;
@@ -253,11 +252,11 @@ img.card-image-right{
   h5.card-title{
       text-align: center;
       font-weight: 600;
-      font-size: 20px;
+      font-size: 2.0rem;
       color: #FFFFFF;
   }
   div.progress{
-      border-radius: 50px;
+      border-radius: 5.0rem;
       
   }
   
@@ -273,14 +272,14 @@ img.card-image-right{
   }
  
   a.btn-primary{
-      padding: 10px 50px 10px 50px;
+      padding: 1.0rem 5.0rem 1.0rem 5.0rem;
   }
   
   div.card{
-      padding-bottom: 30px;
+      padding-bottom: 3.0rem;
   }
   h6.card-title{
-      font-size: 16px;
+      font-size: 1.6rem;
       font-weight: 400;
       color: #3179AA;
   }
@@ -295,10 +294,35 @@ img.card-image-right{
   .outside{
       text-align: center;
       color: #fff;
-      font-size: 20px;
-      padding:30px
+      font-size: 2.0rem;
+      padding:3.0rem
   }
   .upper{
-      padding-bottom: 30px;
+      padding-bottom: 3.0rem;
   }
 
+.green{
+    color: #2F9679;
+}
+
+
+
+@media(max-width:998px) {
+    html{
+        font-size: 55%;
+    }
+    
+}
+
+@media(max-width:768px) {
+    html{
+        font-size: 45%;
+    }
+    
+}
+html{
+    font-size: 70.5%;
+}
+p.card-text{
+    font-size: 1.7rem;
+}
